--- a/deploy/kube/OdbDesignServer/service.yaml
+++ b/deploy/kube/OdbDesignServer/service.yaml
@@ -9,12 +9,14 @@ metadata:
     app: odbdesign-server
     service: odbdesign-server
 spec:
+  ## NodePort-style access
   # type: NodePort
   # ports:
   #   - port: 80
   #     targetPort: ods-dep-port
   #     nodePort: 30888
   #     name: ods-svc-port
+  ## ClusterIP/regular ingress-style access
   ports:
     - port: 80
       name: ods-svc-port
