--- a/deploy/kube/OdbDesignServer/ingress.yaml
+++ b/deploy/kube/OdbDesignServer/ingress.yaml
@@ -4,12 +4,33 @@ metadata:
   name: odbdesign-server-ingress
 spec:
   rules:
-   - http:
-      paths:              
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: odbdesign-server
-            port: 
-              name: ods-svc-port
+    - host: ods.local
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: odbdesign-server-service
+                port:
+                  name: ods-svc-port
+    - host: precision5820
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: odbdesign-server-service
+                port:
+                  name: ods-svc-port
+    # - host: nginx.local
+    #   http:
+    #     paths:
+    #       - path: /
+    #         pathType: Prefix
+    #         backend:
+    #           service:
+    #             name: nginx
+    #             port:
+    #               number: 80
