--- a/deploy/kube/OdbDesignServer/service.yaml
+++ b/deploy/kube/OdbDesignServer/service.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: odbdesign-server
+  name: odbdesign-server-service
   labels:
     app: odbdesign-server
     service: odbdesign-server
