--- a/deploy/kube/default-ingress.yaml
+++ b/deploy/kube/default-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     alb.ingress.kubernetes.io/load-balancer-name: default-ingress
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/healthcheck-path: /healthz
+    alb.ingress.kubernetes.io/healthcheck-path: /healthz/live
 spec:
   ingressClassName: alb
   rules:
