--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -142,7 +142,7 @@ jobs:
     - name: CMake Build          
       run: cmake --build --preset ${{matrix.preset}}
 
-    - name: Checkout Repository
+    - name: Checkout OdbDesign Test Data Repository
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1      
       with:
         repository: 'nam20485/OdbDesignTestData'
