--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -150,9 +150,12 @@ jobs:
         ref: 'main'
         token: ${{ secrets.ODBDESIGN_TESTDATA_ACCESS_TOKEN }}
         
-    - name : Export ODB_TEST_DATA_DIR   
+    - name : Export ODB_TEST_DATA_DIR    
+      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+      with:
+        script: core.exportVariable('ODB_TEST_DATA_DIR', ${{github.workspace}}/OdbDesignTestData/TEST_DATA || '');          
       #run: echo "ODB_TEST_DATA_DIR=${{github.workspace}}/OdbDesignServer/designs" >> $GITHUB_ENV
-      run: echo "ODB_TEST_DATA_DIR=${{github.workspace}}/OdbDesignTestData/TEST_DATA" >> $GITHUB_ENV
+      #run: echo "ODB_TEST_DATA_DIR=${{github.workspace}}/OdbDesignTestData/TEST_DATA" >> $GITHUB_ENV
 
     - name: CMake Test
       id: cmake-test      
