--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -160,9 +160,7 @@ jobs:
 
     - name: CMake Test
       id: cmake-test      
-      run: |
-        export ODB_TEST_DATA_DIR=${{github.workspace}}/OdbDesignTestData/TEST_DATA
-        ctest --test-dir ./out/build/${{matrix.preset}}/OdbDesignTests --output-log ${{github.workspace}}/testlog.txt --output-junit ${{github.workspace}}/testlog.xml --output-on-failure
+      run: ctest --test-dir ./out/build/${{matrix.preset}}/OdbDesignTests --output-log ${{github.workspace}}/testlog.txt --output-junit ${{github.workspace}}/testlog.xml --output-on-failure
       # let the report step fail the job if it finds failed tests...
       continue-on-error: true
 
