--- a/OdbDesignTests/CMakeLists.txt
+++ b/OdbDesignTests/CMakeLists.txt
@@ -21,7 +21,7 @@ include(GoogleTest)
 gtest_discover_tests(OdbDesignTests)
 
 ## PCH
-if (NOT DEFINED ENV{CI})
+#if (NOT DEFINED ENV{CI})
     file (GLOB_RECURSE OdbDesignTests_HEADER_FILES "*.h")
     target_precompile_headers(OdbDesignTests PRIVATE ${OdbDesignTests_HEADER_FILES})
-endif()
+#endif()
