--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ endif()
 # Include sub-projects.
 add_subdirectory("OdbDesignLib")
 add_subdirectory("OdbDesignApp")
+add_subdirectory("RitikApp")
 add_subdirectory("OdbDesignServer")
 add_subdirectory("Utils")
 add_subdirectory("OdbDesignTests")
